# rust-endian

./: Cargo.toml  README.md
src/: endian.rs  lib.rs
